# security-project

./: .gitignore  README.md
docs/: architecture.md  artifact_list.md  checkpoint1.md  checkpoint2.md  checkpoint3.md  final-checkpoint.md  interface_contract.md  package_format.md  project_plan.md  task_split.md  threat_model.md
eval/: README.md
include/: license_api.h  package_core.h
logs/gemini/: README.md
report/: README.md
results/: README.md
scripts/: README.md  build_pipeline.sh  issue_for_device.sh  issue_license.py  profile_device.py
slides/: README.md
src/: README.md
src/app_integration/: README.md
src/host_entry/: README.md  main.c
src/license_core/: README.md
src/rust_core/: Cargo.toml  README.md  build.rs
src/rust_core/src/: authz.rs  binding.rs  capability.rs  crypto.rs  embedded.rs  env.rs  error.rs  ffi.rs  issuer_public_key.rs  lib.rs  macho.rs  measurement.rs  policy.rs  protected_payload.rs  secure_enclave.rs
tests/: README.md
tests/integration/pipeline/: README.md  malformed_profile_smoke_test.sh  profile_issue_smoke_test.sh  smoke_test.sh
tests/security/tamper/: README.md  blob_corruption_smoke.sh  code_signature_constraint_smoke.sh  debugger_constraint_smoke.sh  device_key_mismatch_smoke.sh  device_mismatch_smoke.sh  dyld_constraint_smoke.sh  expired_policy_smoke.sh  measured_section_tamper_smoke.sh  payload_ciphertext_tamper_smoke.sh
tests/unit/rust_core/: README.md
tools/: se_bridge.swift  se_keygen.c  se_keygen.swift
