[package]
name = "rust_core"
version = "0.1.0"
edition = "2024"

[lib]
name = "rust_core"
crate-type = ["staticlib"]

[dependencies]
ed25519-dalek = { version = "2.2", default-features = false, features = ["alloc"] }
sha2 = "0.10"
subtle = "2.5"
serde = { version = "1.0", features = ["derive"] }
ciborium = "0.2"
thiserror = "1.0"
libc = "0.2"
chacha20poly1305 = "0.10"
p256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
